# qed-math-openenv

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
.github/workflows/: check-space-file-size.yml  docker-build-push.yml  lint.yml  sync-to-hf-space.yml  validate-inference.yml
prompts/: __init__.py
prompts/evaluator_prompts/: v2.md
server/: Dockerfile  __init__.py  app.py  math_verify_service.py  mcp_server.py  qed_math_environment.py  rubric.py  ui.html
tests/: __init__.py  test_environment.py
tests/envs/: test_qed_math_environment.py
