# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-qed_math_env"
version = "0.1.0"
description = "Qed Math Env environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "datasets>=4.7.0",
    "math-verify[antlr4_13_2]>=0.9.0",
    "trackio>=0.19.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "qed_math_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["qed_math_env", "qed_math_env.server"]
package-dir = { "qed_math_env" = ".", "qed_math_env.server" = "server" }
