[project]
name = "qed-math-openenv"
version = "0.1.0"
description = "Qed Math Environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "datasets>=4.7.0",
    "math-verify[antlr4_13_2]>=0.9.0",
    "trackio>=0.19.0",
    "openai>=2.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
