[project]
name = "qed-math-openenv"
version = "0.1.0"
description = "Qed Math Environment for OpenEnv"
requires-python = ">=3.13"
dependencies = [
    "openenv-core @ git+https://github.com/rycerzes/OpenEnv.git@feat/qed-math-env",
    "datasets>=4.7.0",
    "math-verify[antlr4_13_2]>=0.9.0",
    "trackio>=0.19.0",
    "openai>=2.30.0",
]

[project.scripts]
server = "server.app:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require a running server or external services",
]
